# py-channelmodel

./: .gitignore  .zenodo.json  README.md  pyproject.toml  setup.py
.github/workflows/: check-formatting.yml  pypi-publish.yml  run_tests.yml
src/channelmodel/: __init__.py  awgn.py  coherence.py  converters.py  frequencydomainchannel.py  plot_powerdelayprofile.py  powerdelayprofile.py  timevariantchannel.py
tests/: __init__.py  helpers.py  test_awgn.py  test_channel.py  test_powerdelayprofile.py
